# safari-skills-passport

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  Cargo.toml  DEMO_REFERENCE_CARD.md  Dockerfile  INSTALLATION.md  LICENSE  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  USER_GUIDE.md  docker-compose.yml  guide.md  run_tests.sh  safari_skills_db.sql  setup.sh
crates/api-server/: Cargo.toml
crates/api-server/src/: config.rs  main.rs
crates/api-server/src/handlers/: auth.rs  credentials.rs  institutions.rs  mod.rs
crates/api-server/src/middleware/: auth.rs
crates/api-server/src/services/: auth.rs  blockchain.rs  credential.rs  ipfs.rs  mod.rs
crates/api-server/src/utils/: qr.rs
crates/api-server/tests/: integration_tests.rs  system_tests.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: lib.rs  types.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  models.rs
crates/database/: Cargo.toml  sqlx-data.json
crates/database/migrations/: 20250101000001_initial_schema.sql  20251106195052_add_qr_code_to_credentials.sql
crates/database/src/: lib.rs  models.rs  repositories.rs
frontend/: DEMO_GUIDE.md  README.md  demo.html  index.html  serve.sh  test-get-started.html  test.html
frontend/css/: styles.css
frontend/js/: app.js
