[workspace]
members = [
    "crates/blockchain",
    "crates/api-server",
    "crates/common",
    "crates/database",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Safari Skills Passport Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP & Web
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
http = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Crypto & Auth
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Substrate & Blockchain (simplified for prototype)
sp-core = { version = "21.0", default-features = false }
sp-runtime = { version = "24.0", default-features = false }

# IPFS
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
qrcode = "0.14"
image = "0.25"
base64 = "0.21"

# Testing
mockall = "0.12"
