[package]
name = "blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }

# For simplicity in this prototype, we'll use core crypto libraries instead of full Substrate
# In production, you would use a full Substrate node
sp-core = { version = "21.0", default-features = false, features = ["std"] }
sp-runtime = { version = "24.0", default-features = false, features = ["std"] }

parity-scale-codec = { version = "3.0", default-features = false, features = ["derive", "std"] }
scale-info = { version = "2.0", default-features = false, features = ["derive", "std"] }

serde.workspace = true

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
